// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header3 /> renders the component with props 1`] = `
.c0 {
  font-weight: normal;
  font-size: 24px;
  line-height: 32px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-family: Alverata,"Arial Black",Verdana,sans-serif;
}

<h3
  class="c0"
  style="text-align: center;"
>
  I'm an h3 header
</h3>
`;

exports[`<Header3 /> renders the component without props with no a11y violations 1`] = `
.c0 {
  font-weight: normal;
  font-size: 24px;
  line-height: 32px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-family: Alverata,"Arial Black",Verdana,sans-serif;
}

<h3
  class="c0"
>
  I'm an h3 header
</h3>
`;
